# nullclaw-nexus

./: .gitignore  BUILD_EXPLAINED.md  LAUNCH.bat  LAUNCH_PRODUCTION.bat  MODEL_SELECTION.md  PAIRING_SYSTEM.md  QUICK_START.md  README.md  README_FOR_USERS.txt  STARTUP_OPTIONS.md  START_NULLCLAW.bat  api-server.cjs  auto-pair.js  capacitor.config.ts  cors-proxy.cjs  drizzle.config.ts  gateway-manager.md  generate-icons.cjs  generate-icons.html  package-lock.json  package.json  silent-pair.cjs  start-dev.ps1  start-gateway.ps1  start-silent.bat  start-system.bat  start-with-gateway.bat  start-with-ollama.bat  start.bat  svelte.config.js  wsl-tunnel.cjs
.agents/skills/testing-nullclaw-nexus/: SKILL.md
.agents/skills/testing-nullclaw-nexus-frontend/: SKILL.md
android/app/: build.gradle  proguard-rules.pro
drizzle/: 0000_narrow_ultimo.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/App/CapApp-SPM/: Package.swift
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: gateway.rs  lib.rs  main.rs
src/lib/: tauri.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
static/: activate-master-key.html  create-icons.html  debug-connection.html  full-debug.html  generate-pwa-icons.html  manifest.json  offline.html  service-worker.js  test-all-pages.html  test-gateway.html  test-pairing-direct.html  test-stores.html
tests/: test-chat-endpoint.html  test-pages.html  test-whatsapp-flow.cjs  test-whatsapp-flow.js
(+36 files in other folders)
