[package]
name = "nullclaw-nexus"
version = "0.1.0"
description = "NullClaw Nexus - AI Agent Control Center"
authors = ["NullClaw"]
edition = "2021"

[lib]
name = "nullclaw_nexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
